frontend/src/components/Homepage/Homepage.css
.homepage {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-items: center;
  align-items: center;
  height: 100%;
  width: 100%;
  color: white;
  background-image: url('../../images/StockSnap_B028VXG7BC.jpg');
  background-size: 100%;
}

.homepage h1 {
  margin-top: 460px;
  font-size: 57px;
}

.homepage h2 {
  margin-top: 10px;
  font-size: 27px;
}

.homepage > a {
  margin-top: 40px;
  font-size: 20px;
  background-color: white;
  padding: 15px 25px;
  color: black;
  border-radius: 3%;
}

.homepage > a:hover {
  transition: 500ms;
  color: gray;
}

.userMain {
  height: 100%;
  width: 100vw;
  position: absolute;
}

.gridContainer {
  display: flex;
  justify-content: center;
  padding: 20px;
  background-color: rgb(245, 245, 245);

}

.imageContainerOne {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  padding: 30px;
  background-color: white;
  width: 1200px;
  height: 700px;
  margin-right: 300px;
  margin-top: 100px;
}

.imageContainerOne a {
  position: absolute;
  width: 430px;
  height: 210px;
  margin-left: 20px;
  margin-top: 20px;
  box-shadow: 2px 2px 100px 5px rgba(0, 0, 0, 0.7)
}

.imageContainerOne a:hover {
 transition: 500ms;
 transition-timing-function: ease-in-out;
 box-shadow: none;
}

.imageContainerTwo {
  position: absolute;
  background-color: white;
  right: 120px;
  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
  border-radius: 2px;
}

.imageContainerOne img {
  margin-left: 10px;
  margin-top: 10px;
  width: 450px;
  height: 230px;
}

.photoCont {
  padding: 10px;
  margin-top: 20px;
}

.gridContainer h2 {
  position: absolute;
  font-size: 15px;
  margin-left: 10px;
  font-weight: 400;
}

.imageContainerOne h5 {
  font-size: 18px;
}

.imageContainerTwo img {
  width: 100px;
  height: 80px;
}

.imageContainerTwo a {
  position: absolute;
  width: 100px;
  height: 80px;
  margin: 0;
}

.imageContainerTwo a:hover {
  box-shadow: none;
}

.firstTop {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  width: 270px;
  height: 200px;
  margin-top: 25px;
}

.middleTop {
  display: flex;
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
  width: 280px;
  height: 220px;
  margin-top: 40px;
}

.imageContainerThree img{
  width: 80px;
  height: 60px;
  padding: 5px;
}

.imageContainerThree {
  background-color: white;
  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
  display: flex;
  position: absolute;
  align-self: center;
  right: 115px;
  border-radius: 2px;
  height: 265px;
  margin: 30px, 0, 30px, 0;

}

.imageContainerThree a {
  width: 80px;
  height: 60px;
  padding: 5px;
  margin: 0;
  border: solid black 1px;
}

.imageContainerThree h2 {
  font-weight: 400;
}

.imageContainerThree a:hover {
  box-shadow: none;
  width: 82px;
  height: 62px;
  transition: 100ms;
  transition-timing-function: ease-in-out;
}

.imageContainerFour {
  display: flex;
  position: absolute;
  align-self: flex-end;
  justify-content: center;
  right: 80px;

  width: 330px;
  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
  border-radius: 2px;
}

.imageContainerFour img {
  width: 300px;
  height: 180px;
}

.imageContainerFour h2 {
  position: absolute;
}

.bottomTop {
  margin-top: 40px;
}

.bottomTop a {
  margin: 0;
  width: 300px;
  height: 180px;
}

.fillerHome {
  width: 100%;
  background-size: 100%;
  background-color: rgba(0, 0,0, .1);
  height: 140px;
}

